Fix scoverage for latest javadoc plugin (#3402)