@@ -14,6 +14,12 @@
     <properties>
         <!-- version used by spark - our json4s is shaded and relocated -->
         <json4s.version>3.6.12</json4s.version>
+        <maven.test.opens>
+          --add-opens=java.base/java.nio=ALL-UNNAMED
+          --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+          --add-opens=java.base/java.util=ALL-UNNAMED
+        </maven.test.opens>
     </properties>
 
     <dependencies>
